# Mimirmap

./: .gitignore  README.md  pyproject.toml  repomix-output.txt
examples/: demo.py
src/mimirmap/: cli.py  core.py
tests/: test_core.py
